fix well overvie kpi on safari

--- a/src/modules/WellExplorer/components/WellOverview/KPIGraphic/VerticalSegment/styles.scss
+++ b/src/modules/WellExplorer/components/WellOverview/KPIGraphic/VerticalSegment/styles.scss
@@ -13,6 +13,7 @@
     position: relative;
     @extend .horizontal;
     justify-content: center;
+    min-height: 119px;
     flex: 1;
 
     &:not(.first) {
